--- a/index.html
+++ b/index.html
@@ -8,14 +8,30 @@
     <link rel="stylesheet" href="style.css">   
 </head>
 <body>
+    <header class="cabecalho">
+    <nav class="cabecalho_menu">
+        <a class="cabecalho_menu_link">Home</a>
+        <a class="cabecalho_menu_link">Sobre mim</a>
+    </nav>    
+    </header>
     <main class="apresentacao">
-    <div><img class="imagem" src="me.jpg" alt="eu"></div>
+    <div><img class="imagem" src="./assets/me.jpg" alt="eu"></div>
     <section class="tudomenosimg">
     <h1 class="titulo">Eleve seu negócio digital a outro nível <strong> um Front-end de qualidade!</strong></h1>
-    <p class="">Olá! Sou Leonardo, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-    <div class="botoes"><a target="_blank" class="botao" href="https://www.instagram.com/mashiro_sniff/">Instagram</a>
-    <a target="_blank" class="botao" href="https://github.com/Mashirovisk">github</a></div>
+    <p class="texto">Olá! Sou Leonardo, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+    <div class="botoes">
+    <h2 class=Apresentacao_links>Acesse minhas redes</h2>
+    <a class="botao" target="_blank" href="https://www.instagram.com/mashiro_sniff/">Instagram</a>
+    <a class="botao" target="_blank"href="https://github.com/Mashirovisk">github
+    <img src="./assets/Logo Github.png"></a>
+    <a class="botao" target="_blank"href="https://www.twitch.tv/kzarken">twitch
+    <img src="./assets/Logo Twitch.png">
+    </a>
+    </div>
 </section>
 </main>
+<footer class="rodape">
+    <p>To fazendo teste</p>
+</footer>
 </body>
 </html>
