--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>desafio garai</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="style.css">   
+    <link rel="stylesheet" href="./styles/style.css">   
 </head>
 <body>
     <header class="cabecalho">
     <nav class="cabecalho_menu">
-        <a class="cabecalho_menu_link">Home</a>
-        <a class="cabecalho_menu_link">Sobre mim</a>
+        <a class="cabecalho_menu_link" href=index.html>Home</a>
+        <a class="cabecalho_menu_link" href=about.html>Sobre mim</a>
     </nav>    
     </header>
     <main class="apresentacao">
