--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>    
     </header>
     <main class="apresentacao">
-    <div><img class="imagem" src="./assets/me.jpg" alt="eu"></div>
+            <img class="imagem" src="./assets/me.jpg" alt="eu">
     <section class="tudomenosimg">
     <h1 class="titulo">Eleve seu negócio digital a outro nível <strong> um Front-end de qualidade!</strong></h1>
     <p class="texto">Olá! Sou Leonardo, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
